--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "uuid": "^3.1.0"
   }
 }
