--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express-handlebars": "^3.0.0",
     "request": "^2.83.0",
     "uuid": "^3.1.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
